edited head and body text

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 
 <head>
-    <title>"Hello World"</title>
+    <title>"VEMA"</title>
 </head>
 <body>
-
+    "this is design"
 </body>
 </html>
