added body text and list

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>"VEMA"</title>
 </head>
 <body>
-    <header>design ?</header>
+    <h1>VEMA</h1>
+    <p>which gate are you at?</p>
+    <div class="vertical-menu">
+        <a>gate 1</a>
+        <a>gate 2</a>
+    </div>
 </body>
 </html>
