added link to stylesheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 
 <head>
-    <title>"VEMA"</title>
+    <title>VEMA</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
     <h1>VEMA</h1>
