--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>VEMA</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" >
 </head>
 <body>
     <h1>VEMA</h1>
