--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <h1>VEMA</h1>
     <p>which gate are you at?</p>
-    <div class="vertical-menu">
-        <a>gate 1</a>
-        <a>gate 2</a>
-    </div>
+    <button>gate 1</button>
+    <button>gate 2</button>
+    <p>click to confirm</p>
+    <button>confirm</button>
 </body>
 </html>
