added dropdown list

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <p>which gate are you at?</p>
     <button>gate 1</button>
     <button>gate 2</button>
+    <p>a list:</p>
+    <form>
+        <select name="dropdown">
+            <option>gate 1</option>
+            <option>gate 2</option>
+        </select>
+    </form>
     <p>click to confirm</p>
     <button>confirm</button>
 </body>
