--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 ﻿<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>VEMA</title>
 
-<head>
-    <title>VEMA</title>
-    <link rel="stylesheet" type="text/css" href="index.css" >
-</head>
-<body>
-    <h1>VEMA</h1>
-    <p>which gate are you at?</p>
-    <button>gate 1</button>
-    <button>gate 2</button>
-    <p>a list:</p>
-    <form>
-        <select name="dropdown">
-            <option>gate 1</option>
-            <option>gate 2</option>
-        </select>
-    </form>
-    <p>click to confirm</p>
-    <button>confirm</button>
-</body>
+        <!-- Our CSS stylesheet file -->
+        <link rel="stylesheet" href="assets/css/styles.css" />
+
+		<!-- Font Awesome Stylesheet -->
+		<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css" />
+
+		<!-- Including Open Sans Condensed from Google Fonts -->
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic" />
+
+        <!--[if lt IE 9]>
+          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+    
+    <body>
+        <h1>VEMA</h1>
+    	<nav id="colorNav">
+			<ul>
+				<li class="red">
+					<a href="#">Which gate are you at?</a>
+                    <ul>
+                        <li><a href="#">Gate 1</a></li>
+                        <li><a href="#">Gate 2</a></li>
+                        <li><a href="#">Gate 3</a></li>
+                        <li><a href="#">Gate 4</a></li>
+                        <li><a href="#">Gate 5</a></li>
+                    </ul>
+				</li>
+			</ul>
+		</nav>  
+        <p>You have selected: Gate 2</p>
+    </body>
 </html>
