--- a/index.html
+++ b/index.html
@@ -20,20 +20,26 @@
     
     <body>
         <h1>VEMA</h1>
-    	<nav id="colorNav">
-			<ul>
-				<li class="red">
-					<a href="#">Which gate are you at?</a>
+        <nav id="colorNav">
+            <ul>
+                <li class="red">
+                    <a href="#">Which gate are you at?</a>
                     <ul>
-                        <li><a href="#">Gate 1</a></li>
-                        <li><a href="#">Gate 2</a></li>
-                        <li><a href="#">Gate 3</a></li>
-                        <li><a href="#">Gate 4</a></li>
-                        <li><a href="#">Gate 5</a></li>
+                        <li><a href="javascript:;" onclick="select_gate(1)">Gate 1</a></li>
+                        <li><a href="javascript:;" onclick="select_gate(2)">Gate 2</a></li>
+                        <li><a href="javascript:;" onclick="select_gate(3)">Gate 3</a></li>
+                        <li><a href="javascript:;" onclick="select_gate(4)">Gate 4</a></li>
+                        <li><a href="javascript:;" onclick="select_gate(5)">Gate 5</a></li>
                     </ul>
-				</li>
-			</ul>
-		</nav>  
-        <p>You have selected: Gate 2</p>
+                </li>
+            </ul>
+        </nav>
+        <p id="p1">No selection</p>
+        <button>Confirm</button>
+        <script>
+            function select_gate(gate) {
+                document.getElementById("p1").innerHTML = "You have selected: Gate " + gate;
+            }
+        </script>
     </body>
 </html>
