--- a/index.html
+++ b/index.html
@@ -1,54 +1,83 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>VEMA</title>
+<head>
+    <meta charset="utf-8" />
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+    <title>VEMA</title>
 
-        <!-- Our CSS stylesheet file -->
-        <link rel="stylesheet" href="assets/css/styles.css" />
+    <!-- Our CSS stylesheet file -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
-		<!-- Font Awesome Stylesheet -->
-		<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css" />
+    <!-- Font Awesome Stylesheet -->
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css" />
 
-		<!-- Including Open Sans Condensed from Google Fonts -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic" />
+    <!-- Including Open Sans Condensed from Google Fonts -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic" />
 
-        <!--[if lt IE 9]>
-          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-    </head>
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
     
-    <body>
-        <h1>VEMA</h1>
-        <nav id="colorNav">
-            <ul>
-                <li class="red">
-                    <a href="#">Which gate are you at?</a>
-                    <ul>
-                        <li><a href="javascript:;" onclick="select_gate(1)">Gate 1</a></li>
-                        <li><a href="javascript:;" onclick="select_gate(2)">Gate 2</a></li>
-                        <li><a href="javascript:;" onclick="select_gate(3)">Gate 3</a></li>
-                        <li><a href="javascript:;" onclick="select_gate(4)">Gate 4</a></li>
-                        <li><a href="javascript:;" onclick="select_gate(5)">Gate 5</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-        <p id="p1">No selection</p>
-        <button onclick="confirm()">Confirm</button>
-        <p id="p2"></p>
-        <script>
-            function select_gate(gate) {
-                document.getElementById("p1").innerHTML = "You have selected: Gate " + gate;
+<body>
+    <h1>VEMA</h1>
+    <nav id="colorNav">
+        <ul>
+            <li class="red">
+                <a href="#">Which gate are you at?</a>
+                <ul>
+                    <li><a href="javascript:;" onclick="select_gate(1)">Gate 1</a></li>
+                    <li><a href="javascript:;" onclick="select_gate(2)">Gate 2</a></li>
+                    <li><a href="javascript:;" onclick="select_gate(3)">Gate 3</a></li>
+                    <li><a href="javascript:;" onclick="select_gate(4)">Gate 4</a></li>
+                    <li><a href="javascript:;" onclick="select_gate(5)">Gate 5</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <p id="p1">No selection</p>
+    <button onclick="confirm()">Confirm</button>
+    <p id="p2"></p>
+    <pre id='data'></pre>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-firestore.js"></script>
+    <script>
+        // Initialize Firebase
+        // TODO: Replace with your project's customized code snippet
+        // Required for side-effects
+        var config = {
+            apiKey: "AIzaSyA8REddOuHBkuZHo7t8Ks9y59jblWRr0gM",
+            authDomain: "design-8d4ff.firebaseapp.com",
+            projectId: "design-8d4ff",
+        };
+        firebase.initializeApp(config);
+        var db = firebase.firestore();
+    </script>
+    <script>
+        function select_gate(gate) {
+            document.getElementById("p1").innerHTML = "You have selected: Gate " + gate;
+        }
+        function confirm() {
+            if (document.getElementById("p1").innerHTML.endsWith("n")) {
+                window.alert("Please select a gate")
+            } else {
+                window.alert("Gate " + document.getElementById("p1").innerHTML.charAt(24) + " confirmed")
+                document.getElementById("p2").innerHTML = "Hang tight, we're on the way!"
+                var dt = new Date();
+                var time = dt.toLocaleTimeString();
+                db.collection("gate").add({
+                    gate: document.getElementById("p1").innerHTML.charAt(24),
+                    time: time
+                })
+                    .then(function (docRef) {
+                        console.log("Document written with ID: ", docRef.id);
+                    })
+                    .catch(function (error) {
+                        console.error("Error adding document: ", error);
+                    });
             }
-            function confirm() {
-                if (document.getElementById("p1").innerHTML.endsWith("n")) {
-                    window.alert("Please select a gate")
-                } else {
-                    window.alert("Gate " + document.getElementById("p1").innerHTML.charAt(24) + " confirmed")
-                    document.getElementById("p2").innerHTML = "Hang tight, we're on the way!"
-                }
-            }
-        </script>
-    </body>
+        }
+    </script>
+
+</body>
 </html>
