added description text

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 
             <body>
                 <h1>VEMA</h1>
+                <h2>Scroll down to call for VEMA!</h2>
+                <p>What's VEMA?</p>
+                <h3>VEMA is an autonomous vending machine.</h3>
                 <nav id="colorNav">
                     <ul>
                         <li class="red">
@@ -80,20 +83,7 @@
                 <button onclick="confirm()">Confirm</button>
                 <p id="p2"></p>
                 <pre id='data'></pre>
-                <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-firestore.js"></script>
-    <script>
-        // Initialize Firebase
-        // TODO: Replace with your project's customized code snippet
-        // Required for side-effects
-        var config = {
-            apiKey: "AIzaSyA8REddOuHBkuZHo7t8Ks9y59jblWRr0gM",
-authDomain: "design-8d4ff.firebaseapp.com",
-projectId: "design-8d4ff",
-};
-firebase.initializeApp(config);
-var db = firebase.firestore();
-    </script>
     <script>
         function create_array(x, y) {
             var bigArray = new Array(y);
