--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <h1>VEMA</h1>
                 <h2>Scroll down to call for VEMA!</h2>
                 <p>What's VEMA?</p>
-                <h3>VEMA is an autonomous vending machine.</h3>
+                <img src="assets/img/vema.jpg"/>
+                <h3>VEMA is an autonomous vending machine and concierge.</h3>
                 <nav id="colorNav">
                     <ul>
                         <li class="red">
