uncommented ros parts

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-    <!--<script type="text/javascript" src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
+    <script type="text/javascript" src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
     <script type="text/javascript" src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
     <script type="text/javascript" type="text/javascript">
 
@@ -57,7 +57,7 @@
             console.log('Connection to websocket server closed.');
         });
 
-        vemagoal.publish();-->
+        vemagoal.publish();
 </head>
 
             <body>
