edited description text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h2>Scroll down to call for VEMA!</h2>
                 <p>What's VEMA?</p>
                 <img src="assets/img/howboutthisone.png"/>
-                <h3>VEMA is an autonomous vending machine and concierge.</h3>
+                <h3>VEMA is an autonomous vending machine and concierge. Simply select the gate closest to you and hit confirm, and VEMA will be with you shortly. </h3>
                 <nav id="colorNav">
                     <ul>
                         <li class="red">
