--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
     <title>VEMA</title>
 
     <!-- Our CSS stylesheet file -->
@@ -21,69 +20,70 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
     <script type="text/javascript" src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
-        <script type="text/javascript" src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
-        <script type="text/javascript" type="text/javascript">
+    <script type="text/javascript" src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
+    <script type="text/javascript" type="text/javascript">
 
-            var ros = new ROSLIB.Ros({ url: 'ws://localhost:9090'});
+        var ros = new ROSLIB.Ros({ url: 'ws://localhost:9090'});
 
-            var vemaClient = new ROSLIB.ActionClient({
-                                ros: ros,
-                                serverName: '/move_base',
-                                actionName: 'move_base_msgs/MoveBaseAction',
-                                });
+        var vemaClient = new ROSLIB.ActionClient({
+            ros: ros,
+            serverName: '/move_base',
+            actionName: 'move_base_msgs/MoveBaseAction',
+            });
 
-    var vemagoal = new ROSLIB.Goal({
-        actionClient: vemaClient,
-        goalMessage: {
-                    target_pose:{
-                        header:{
-                            frame_id: "map",
+        var vemagoal = new ROSLIB.Goal({
+            actionClient: vemaClient,
+            goalMessage: {
+                target_pose:{
+                    header:{
+                        frame_id: "map",
+                    },
+
+                    pose:{
+                        position:{
+                            x : 1,
+                            y : 0,
+                            z : 0,
                         },
-
-                        pose:{
-                            position:{
-                                x : 1,
-                                y : 0,
-                                z : 0,
-                            },
-                            orientation:{
-                                x : 0,
-                                y : 0,
-                                z : 0,
-                                w : 1,
-                            }
+                        orientation:{
+                            x : 0,
+                            y : 0,
+                            z : 0,
+                            w : 1,
                         }
                     }
-
-        }
+                }
+            }
         });
 
     console.log(vemagoal);
 
     vemagoal.on('feedback', function (feedback) {
-    console.log('Feedback: ' + feedback.sequence);
+        console.log('Feedback: ' + feedback.sequence);
     });
 
     vemagoal.on('result', function (result) {
-    console.log('Final Result: ' + result.sequence);
+        console.log('Final Result: ' + result.sequence);
     });
 
     vemagoal.on('status', function (status) {
-    console.log('Status: ' + status.sequence) ;
+        console.log('Status: ' + status.sequence) ;
     });
 
     ros.on('connection', function () {
-    console.log('Connected to websocket server.');
-    });
+        console.log('Connected to websocket server.');
+        });
+
     ros.on('error', function (error) {
-    console.log('Error connecting to websocket server: ', error);
-    });
+        console.log('Error connecting to websocket server: ', error);
+        });
+
     ros.on('close', function () {
-    console.log('Connection to websocket server closed.');
+        console.log('Connection to websocket server closed.');
     });
 
-            vemagoal.send();        
-            </script>
+    vemagoal.send();        
+    </script>
 </head>
 
             <body>
@@ -112,14 +112,19 @@
                 <pre id='data'></pre>
     <script>
         function create_array(x, y) {
-            var bigArray = new Array(y);
-            for (var i = 0; i < bigArray.length; i++) {
-                var smallArray = new Array(x);
-                for (var j = 0; j < smallArray.length; j++) {
-                    smallArray[j] = i;
-                }
-                bigArray[i] = smallArray;
-            }
+            //var bigArray = new Array(y);
+            //for (var i = 0; i < bigArray.length; i++) {
+            //    var smallArray = new Array(x);
+            //    for (var j = 0; j < smallArray.length; j++) {
+            //        smallArray[j] = i;
+            //    }
+            //    bigArray[i] = smallArray;
+            //}
+            var bigArray = [[-11.3, -1.85, 0, 0, 0, 0, 1],
+                [-9.65, -8.3, 0, 0, 0, 0, 1],
+                [4.4, -5, 0, 0, 0, 0, 1],
+                [2.25, 0.85, 0, 0, 0, 0, 1],
+                [0, 0, 0, 0, 0, 0, 0]]
             return bigArray;
         }
         function select_gate(gate) {
@@ -127,6 +132,7 @@
             var emptyArray = create_array(7, 5);
             var selectedArray = emptyArray[gate];
             console.log(selectedArray);
+            
         }
         function confirm() {
             if (document.getElementById("p1").innerHTML.endsWith("n")) {
