--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--<script type="text/javascript" src="http://cdn.robotwebtools.org/roslibjs/current/roslib.min.js"></script>-->
     <script src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
     <script src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
-    <script type="text/javascript">
+    <script>
 
         var ros = new ROSLIB.Ros({ url: 'ws://localhost:9090' });
 
