--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
     <!--<script type="text/javascript" src="http://cdn.robotwebtools.org/roslibjs/current/roslib.min.js"></script>-->
     <script src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
-    <script src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
+    <!--<script src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>-->
+    <script src="../build/roslib.js"></script>
+
     <script>
 
         var ros = new ROSLIB.Ros({ url: 'ws://localhost:9090' });
