--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     <script>
 
+        var ROSLIB = require("roslib");
+
         var ros = new ROSLIB.Ros({ url: 'ws://localhost:9090' });
 
         var vemaClient = new ROSLIB.ActionClient({
