--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
     <!--<script type="text/javascript" src="http://cdn.robotwebtools.org/roslibjs/current/roslib.min.js"></script>-->
-    <script src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
+    <!--<script src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>-->
     <!--<script src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>-->
-    <script src="http://static.robotwebtools.org/roslibjs/current/build/roslib.js"></script>
+    <!--<script src="http://static.robotwebtools.org/roslibjs/current/build/roslib.js"></script>-->
+    <script type="text/javascript" src="http://cdn.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
+    <script type="text/javascript" src="http://cdn.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
 
     <script>
 
